--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -119,6 +120,11 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/* Prevent Tailwind overrides */
+.markdown-body * {
+  all: revert !important;
 }
 
 .editor-bg {
